# Bootcamp

./: .gitignore  .gitmodules  README.md  SECURITY.md
.github/: FUNDING.yml
basics/: decorator.ipynb  float.ipynb  functoins.ipynb  generator.ipynb  inbuilt.ipynb  int.ipynb  operator.ipynb  random.ipynb  set.ipynb  str.ipynb  typecast.ipynb  types_of_var.ipynb
weak_1/: README.md
week_01_web_1/: README.md
week_02_web_2/: README.md
week_06_django_2/django-blog/: .gitignore  README.md  manage.py  pyproject.toml
week_06_django_2/django-blog/blogyek/: asgi.py  settings.py  urls.py  wsgi.py
week_06_django_2/django-blog/pages/: urls.py  views.py
week_06_django_2/django-blog/posts/: admin.py  models.py  urls.py  views.py
week_06_django_2/django-blog/posts/migrations/: 0001_initial.py  0002_auto_20210318_2008.py  0003_auto_20210323_1622.py
week_06_django_2/django-blog/static/css/: animate.css  bootstrap-reboot.css  bootstrap.css  owl.carousel.min.css  style.css
week_06_django_2/django-blog/static/js/: main.js
week_06_django_2/django-blog/staticfiles/css/: bootstrap-grid.css  bootstrap.css.map
week_06_django_2/django-blog/staticfiles/hitcount/: hitcount-jquery.js  jquery.postcsrf.js
week_06_django_2/django-blog/templates/: about.html  author_detail.html  authors.html  change-password.html  comment_create.html  contact.html  index.html  login.html  post_create.html  post_delete.html  post_detail.html  post_update.html  posts.html  profile.html  profile_update.html  register.html
week_06_django_2/django-blog/templates/partials/: _base.html  _sidebar.html  mail_template.html  messages.html
week_06_django_2/django-blog/users/: admin.py  forms.py  models.py  urls.py  views.py
week_06_django_2/django-blog/users/migrations/: 0001_initial.py  0002_auto_20210318_2356.py
week_08_math_n_stati/: Statistics_for_ML.ipynb  hypothesis-testing.ipynb  (+1 more)
week_1/: README.md
(+180 files in other folders)
