[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Izam Mohammed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.3.1"
beautifulsoup4 = "4.9.3"
cssutils = "2.2.0"
django = "3.1.7"
django-ckeditor = "6.0.0"
django-cleanup = "5.1.0"
django-etc = "1.3.0"
django-hitcount = "1.3.3"
django-js-asset = "1.2.2"
future = "0.18.2"
pillow = "8.1.2"
pynliner = "0.8.0"
pytz = "2021.1"
soupsieve = "2.2.1"
sqlparse = "0.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 69

[tool.ruff.lint]
select = [
    # pep8 naming
    "N",
    # isort
    "I",
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # pydocstyle
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8 annotations
    "ANN",
    # flake8 commas
    "COM818",
    # flake8-future-annotations
    "FA",
    # flake8-print
    "T20",
    # flake8-self
    "SLF",
    # flake8-raise
    "RSE",
    # flake8-pyi
    "PYI",
    # flake8-no-pep420
    "INP",
    # flake8-import-conventions
    "ICN",
    # flake8-implicit-str-concat 
    "ISC002",
    "ISC003",
    # flake8-builtins
    "A",
    # flake8-boolean-trap
    "FBT",
    # flake8-blind-except
    "BLE",
]

ignore = ["ANN101"]
pyupgrade.keep-runtime-typing = true

[tool.ruff.lint.pycodestyle]
max-line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
preview = true

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]
